# libpkmn-database

./: CMakeLists.txt  README.md
cmake/Modules/: FindSQLite3.cmake
database/: CMakeLists.txt  libpkmn-additions  libpkmn-form-names
scripts/: generate-libpkmn-db-dump.py  generate-libpkmn-form-names.py
sqlite3/: CMakeLists.txt
